fixed gameboard printing when no games exist